[Update][Blog Section]: Update links in blog.html to point to new blog pages; add new blog pages for fragrance science, gift guide, and occasion guides.

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -41,67 +41,67 @@
       <h1 class="section-headline">Blog & Articulos</h1>
       <article class="catalogue__categories">
         <div class="catalogue__card">
-          <a class="PDF-link" href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
+          <a class="PDF-link" href="./blogs/our-benefits.html" target="_blank">
             <span class="card-content-container">
               <img src="../Images/Blog/beneficios.jpg" alt="Beneficios" loading="lazy" width="400" height="300">
               <h3>Nuestros Beneficios</h3>
               <p>Descubre las ventajas exclusivas que ofrecemos a nuestros clientes: productos de alta calidad, atención personalizada y una experiencia de compra única.</p>
-              <a href="./beneficios.html" rel="noopener noreferrer" class="call-to-action" style="--clr:#fff" target="_blank">
+              <span class="call-to-action" style="--clr:#fff">
                 <span>Perfumeria Caballero</span>
                 <i></i>
-              </a>
+              </span>
             </span>
           </a>
         </div>
         <div class="catalogue__card">
-          <a class="PDF-link" href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
+          <a class="PDF-link" href="./blogs/fragrance-science.html" target="_blank">
             <span class="card-content-container">
               <img src="../Images/Blog/ciencia-fragancias.jpg" alt="Ciencia de las Fragancias" loading="lazy" width="400" height="300">
               <h3>Ciencia de las Fragancias y Educación</h3>
               <p>Ideal para lectores de blog que aman aprender el “por qué” detrás del comportamiento de las fragancias.</p>
-              <a href="./ciencia-fragancias.html" rel="noopener noreferrer" class="call-to-action" style="--clr:#fff" target="_blank">
+              <span class="call-to-action" style="--clr:#fff">
                 <span>Perfumeria Caballero</span>
                 <i></i>
-              </a>
+              </span>
             </span>
           </a>
         </div>
         <div class="catalogue__card">
-          <a class="PDF-link" href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
+          <a class="PDF-link" href="./blogs/occasion-guides.html" target="_blank">
             <span class="card-content-container">
               <img src="../Images/Blog/guia-ocasiones.jpg" alt="Guía Según la Ocasión" loading="lazy" width="400" height="300">
               <h3>Guías Según la Ocasión y el Momento</h3>
               <p>Ayuda a los clientes a saber cuándo usar ciertos perfumes según el clima, la hora del día o la actividad.</p>
-              <a href="./guia-ocasiones.html" rel="noopener noreferrer" class="call-to-action" style="--clr:#fff" target="_blank">
+              <span class="call-to-action" style="--clr:#fff">
                 <span>Perfumeria Caballero</span>
                 <i></i>
-              </a>
+              </span>
             </span>
           </a>
         </div>
         <div class="catalogue__card">
-          <a class="PDF-link" href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
+          <a class="PDF-link" href="./blogs/personal-style.html" target="_blank">
             <span class="card-content-container">
               <img src="../Images/Blog/estilo-personal.jpg" alt="Estilo Personal" loading="lazy" width="400" height="300">
               <h3>Estilo Personal y Uso Avanzado</h3>
               <p>Para quienes desarrollan una relación más profunda y personalizada con las fragancias.</p>
-              <a href="./estilo-personal.html" rel="noopener noreferrer" class="call-to-action" style="--clr:#fff" target="_blank">
+              <span class="call-to-action" style="--clr:#fff">
                 <span>Perfumeria Caballero</span>
                 <i></i>
-              </a>
+              </span>
             </span>
           </a>
         </div>
         <div class="catalogue__card">
-          <a class="PDF-link" href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
+          <a class="PDF-link" href="./blogs/gift-guide.html" target="_blank">
             <span class="card-content-container">
               <img src="../Images/Blog/guia-regalos.jpg" alt="Guía para Comprar y Regalar" loading="lazy" width="400" height="300">
               <h3>Guía para Comprar y Regalar</h3>
               <p>Dirigido a compradores de regalos, compradores online y coleccionistas de perfumes.</p>
-              <a href="./guia-regalos.html" rel="noopener noreferrer" class="call-to-action" style="--clr:#fff" target="_blank">
+              <span class="call-to-action" style="--clr:#fff">
                 <span>Perfumeria Caballero</span>
                 <i></i>
-              </a>
+              </span>
             </span>
           </a>
         </div>
