--- a/HTML/blogs/our-benefits.html
+++ b/HTML/blogs/our-benefits.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perfumas.com</title>
-  <link rel="stylesheet" href="../CSS/index.css" />
-  <link rel="stylesheet" href="../CSS/Media-Queries.css" />
-  <link rel="stylesheet" href="../CSS/blog.css" />
-  <link rel="stylesheet" href="../CSS/color-button.css" />
-  <link rel="stylesheet" href="../CSS/Color-Button-Smaller.css">
+  <link rel="stylesheet" href="../../CSS/index.css" />
+  <link rel="stylesheet" href="../../CSS/Media-Queries.css" />
+  <link rel="stylesheet" href="../../CSS/blog.css" />
+  <link rel="stylesheet" href="../../CSS/color-button.css" />
+  <link rel="stylesheet" href="../../CSS/Color-Button-Smaller.css">
   <script src="https://kit.fontawesome.com/4f11154ed4.js" crossorigin="anonymous"></script>
   <script src="../javascript.js" defer></script>
 </head>
 <body>
   <header data-header>
     <nav class="nav-mobile" data-mobile-menu>
-      <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
+      <img class="logo" src="../../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
       <ul class="mobile-links">
         <li><a href="./index.html">Home</a></li>
         <li><a href="./about-us.html">Acerca De Nosotros</a></li>
@@ -26,7 +26,7 @@
       <i class="fa-solid fa-x" data-close-button></i>
     </nav>
     <nav class="nav-desktop" data-desk-menu>
-      <img class="logo" src="../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
+      <img class="logo" src="../../Images/Logo velas artesanales rosa/Perfumas-two.png" alt="Perfumas Logo" />
       <i class="fa-solid fa-bars" data-menu-bar></i>
       <ul class="desktop-links">
         <li><a href="./index.html">Home</a></li>
@@ -41,9 +41,9 @@
       <h1 class="section-headline">Blog & Articulos</h1>
       <article class="catalogue__categories">
         <div class="catalogue__card">
-          <a class="PDF-link" href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
+          <a class="PDF-link" href="../../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
             <span class="card-content-container">
-              <img src="../Images/Blog/beneficios.jpg" alt="Beneficios" loading="lazy" width="400" height="300">
+              <img src="../../Images/Blog/beneficios.jpg" alt="Beneficios" loading="lazy" width="400" height="300">
               <h3>Nuestros Beneficios</h3>
               <p>Descubre las ventajas exclusivas que ofrecemos a nuestros clientes: productos de alta calidad, atención personalizada y una experiencia de compra única.</p>
               <a href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" rel="noopener noreferrer" class="call-to-action" style="--clr:#fff" target="_blank">
@@ -56,7 +56,7 @@
         <div class="catalogue__card">
           <a class="PDF-link" href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
             <span class="card-content-container">
-              <img src="../Images/Blog/ciencia-fragancias.jpg" alt="Ciencia de las Fragancias" loading="lazy" width="400" height="300">
+              <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="Ciencia de las Fragancias" loading="lazy" width="400" height="300">
               <h3>Ciencia de las Fragancias y Educación</h3>
               <p>Ideal para lectores de blog que aman aprender el “por qué” detrás del comportamiento de las fragancias.</p>
               <a href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" rel="noopener noreferrer" class="call-to-action" style="--clr:#fff" target="_blank">
@@ -69,7 +69,7 @@
         <div class="catalogue__card">
           <a class="PDF-link" href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
             <span class="card-content-container">
-              <img src="../Images/Blog/guia-ocasiones.jpg" alt="Guía Según la Ocasión" loading="lazy" width="400" height="300">
+              <img src="../../Images/Blog/guia-ocasiones.jpg" alt="Guía Según la Ocasión" loading="lazy" width="400" height="300">
               <h3>Guías Según la Ocasión y el Momento</h3>
               <p>Ayuda a los clientes a saber cuándo usar ciertos perfumes según el clima, la hora del día o la actividad.</p>
               <a href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" rel="noopener noreferrer" class="call-to-action" style="--clr:#fff" target="_blank">
@@ -82,7 +82,7 @@
         <div class="catalogue__card">
           <a class="PDF-link" href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
             <span class="card-content-container">
-              <img src="../Images/Blog/estilo-personal.jpg" alt="Estilo Personal" loading="lazy" width="400" height="300">
+              <img src="../../Images/Blog/estilo-personal.jpg" alt="Estilo Personal" loading="lazy" width="400" height="300">
               <h3>Estilo Personal y Uso Avanzado</h3>
               <p>Para quienes desarrollan una relación más profunda y personalizada con las fragancias.</p>
               <a href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" rel="noopener noreferrer" class="call-to-action" style="--clr:#fff" target="_blank">
@@ -95,7 +95,7 @@
         <div class="catalogue__card">
           <a class="PDF-link" href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" target="_blank">
             <span class="card-content-container">
-              <img src="../Images/Blog/guia-regalos.jpg" alt="Guía para Comprar y Regalar" loading="lazy" width="400" height="300">
+              <img src="../../Images/Blog/guia-regalos.jpg" alt="Guía para Comprar y Regalar" loading="lazy" width="400" height="300">
               <h3>Guía para Comprar y Regalar</h3>
               <p>Dirigido a compradores de regalos, compradores online y coleccionistas de perfumes.</p>
               <a href="../Images/Blog/FRAGANCIAS-MASCULINAS-DISPONIBLES.pdf" rel="noopener noreferrer" class="call-to-action" style="--clr:#fff" target="_blank">
@@ -112,7 +112,7 @@
   <footer data-footer>
     <div class="footer-content container">
       <section class="footer-presentation">
-        <img class="footer-logo" src="../Images/Logo velas artesanales rosa/2.png" alt="Perfumas Logo">
+        <img class="footer-logo" src="../../Images/Logo velas artesanales rosa/2.png" alt="Perfumas Logo">
         <p id="slogan">Calidad a su alcance</p>
         <div id="mission">
           <p>Nuestro negocio nació en el año 2015. Nos enfocamos principalmente en el sector de la perfumería, con el propósito de ofrecer productos de la más alta calidad y una excelente atención, que cumplan de manera satisfactoria las necesidades de nuestros clientes.</p>
