Refactor carousel structure and styles for improved clarity and responsiveness

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -357,12 +357,12 @@
   
         </section>
   
-        <section id="features"class="features five">
+        <section id="features" class="features-carousel">
   
           <h1 class="section-headline">
             Caracteristicas
           </h1>
-          <article class="part-content">
+          <article class="features-carousel__content">
   
             <span class="part-five-image-container">
             </span>
