Refactor our-benefits HTML structure for improved readability and maintainability

--- a/HTML/blogs/our-benefits.html
+++ b/HTML/blogs/our-benefits.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perfumas.com</title>
   <link rel="stylesheet" href="../../CSS/index.css" />
-  <link rel="stylesheet" href="../../CSS/Media-Queries.css" />
   <link rel="stylesheet" href="../../CSS/blog.css" />
   <link rel="stylesheet" href="../../CSS/color-button.css" />
   <link rel="stylesheet" href="../../CSS/Color-Button-Smaller.css">
   <link rel="stylesheet" href="../../CSS/blogs/our-benefits.css">
+  <link rel="stylesheet" href="../../CSS/Media-Queries.css" />
   <script src="https://kit.fontawesome.com/4f11154ed4.js" crossorigin="anonymous"></script>
   <script src="../../javascript.js" defer></script>
 </head>
@@ -52,7 +52,7 @@
             <i data-white class="fa-solid fa-circle"></i>
             <i class="fa-solid fa-circle"></i>
           </span>
-          <ul data-slides>
+          <ul class="slides-desktop" data-slides>
             <li class="slide" data-active >
               <span class="carousel-slide-content">
                 <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
@@ -65,6 +65,35 @@
               <span class="carousel-slide-content">
                 <img src="../../Images/Blog/estilo-personal.jpg" alt="">
                 <h3>Estilo Personal y Uso Avanzado</h3>
+              </span>
+            </li>
+            <li class="slide" >
+              <span class="carousel-slide-content">
+                <img src="../../Images/Blog/guia-regalos.jpg" alt="">
+                <h3>Guía para Comprar y Regalar</h3>
+              </span>
+            </li>
+          </ul>
+          <ul class="slides-mobile"data-slides>
+            <li class="slide" data-active >
+              <span class="carousel-slide-content">
+                <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
+                <h3>Ciencia de las Fragancias y Educación</h3>
+              </span>
+              <span class="carousel-slide-content">
+                <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
+                <h3>Guías Según la Ocasión y el Momento</h3>
+              </span>
+              
+            </li>
+            <li class="slide" >
+              <span class="carousel-slide-content">
+                <img src="../../Images/Blog/estilo-personal.jpg" alt="">
+                <h3>Estilo Personal y Uso Avanzado</h3>
+              </span>
+              <span class="carousel-slide-content">
+                <img src="../../Images/Blog/guia-regalos.jpg" alt="">
+                <h3>Guía para Comprar y Regalar</h3>
               </span>
             </li>
             <li class="slide" >
