Refactor carousel classes for improved clarity and structure

--- a/HTML/blogs/our-benefits.html
+++ b/HTML/blogs/our-benefits.html
@@ -44,7 +44,7 @@
   <main data-main>
     <section class="features-carousel">
       <article class="our-benefits-features-carousel__content">
-        <span data-carousel class="carousel">
+        <span data-carousel class="desktop carousel">
           <button class="button preview" data-carousel-button='preview'>
             <i class="fa-solid fa-chevron-left"></i>
           </button>
@@ -74,6 +74,18 @@
               </span>
             </li>
           </ul>
+          <button class="button next" data-carousel-button='next'>
+            <i class="fa-solid fa-chevron-right"></i>
+          </button>
+        </span>
+        <span data-carousel class="mobile carousel">
+          <button class="button preview" data-carousel-button='preview'>
+            <i class="fa-solid fa-chevron-left"></i>
+          </button>
+          <span class="card-icon" data-slides-icon>
+            <i data-white class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+          </span>
           <ul class="slides-mobile"data-slides>
             <li class="slide" data-active >
               <span class="carousel-slide-content">
@@ -91,12 +103,6 @@
                 <img src="../../Images/Blog/estilo-personal.jpg" alt="">
                 <h3>Estilo Personal y Uso Avanzado</h3>
               </span>
-              <span class="carousel-slide-content">
-                <img src="../../Images/Blog/guia-regalos.jpg" alt="">
-                <h3>Guía para Comprar y Regalar</h3>
-              </span>
-            </li>
-            <li class="slide" >
               <span class="carousel-slide-content">
                 <img src="../../Images/Blog/guia-regalos.jpg" alt="">
                 <h3>Guía para Comprar y Regalar</h3>
