Refactor our-benefits carousel for improved responsiveness and layout

--- a/HTML/blogs/our-benefits.html
+++ b/HTML/blogs/our-benefits.html
@@ -39,10 +39,7 @@
       </ul>
     </nav>
       <h1 class="section-headline">Otros Articulos</h1>
-
-  </header>
-  <main data-main>
-    <section class="features-carousel">
+       <section class="features-carousel">
       <article class="our-benefits-features-carousel__content">
         <span data-carousel class="desktop carousel">
           <button class="button preview" data-carousel-button='preview'>
@@ -78,7 +75,7 @@
             <i class="fa-solid fa-chevron-right"></i>
           </button>
         </span>
-        <span data-carousel class="mobile carousel">
+        <span data-carousel class="mobile medium carousel">
           <button class="button preview" data-carousel-button='preview'>
             <i class="fa-solid fa-chevron-left"></i>
           </button>
@@ -113,10 +110,55 @@
             <i class="fa-solid fa-chevron-right"></i>
           </button>
         </span>
+        <span data-carousel class="mobile small carousel">
+          <button class="button preview" data-carousel-button='preview'>
+            <i class="fa-solid fa-chevron-left"></i>
+          </button>
+          <span class="card-icon" data-slides-icon>
+            <i data-white class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+          </span>
+          <ul class="slides-mobile"data-slides>
+            <li class="slide" data-active >
+              <span class="carousel-slide-content">
+                <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
+                <h3>Ciencia de las Fragancias y Educación</h3>
+              </span>
+              
+            </li>
+            <li class="slide" >
+              <span class="carousel-slide-content">
+                <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
+                <h3>Guías Según la Ocasión y el Momento</h3>
+              </span>
+              
+            </li>
+            <li class="slide" >
+              <span class="carousel-slide-content">
+                <img src="../../Images/Blog/estilo-personal.jpg" alt="">
+                <h3>Estilo Personal y Uso Avanzado</h3>
+              </span>
+            </li>
+            <li class="slide" >
+              <span class="carousel-slide-content">
+                <img src="../../Images/Blog/guia-regalos.jpg" alt="">
+                <h3>Guía para Comprar y Regalar</h3>
+              </span>
+            </li>
+          </ul>
+          <button class="button next" data-carousel-button='next'>
+            <i class="fa-solid fa-chevron-right"></i>
+          </button>
+        </span>
       </article>  
     </section>
+
+  </header>
+  <main data-main>
+   
     <h1 class="section-headline">Nuestros Beneficios</h1>
-    <article><span></span></article>
   </main>
   <footer data-footer>
     <div class="footer-content container">
