--- a/HTML/blogs/our-benefits.html
+++ b/HTML/blogs/our-benefits.html
@@ -39,7 +39,7 @@
       </ul>
     </nav>
       <h1 class="section-headline">Otros Articulos</h1>
-       <section class="features-carousel">
+       <section cl  ass="features-carousel">
       <article class="our-benefits-features-carousel__content">
         <span data-carousel class="desktop carousel">
           <button class="button preview" data-carousel-button='preview'>
@@ -49,7 +49,7 @@
             <i data-white class="fa-solid fa-circle"></i>
             <i class="fa-solid fa-circle"></i>
           </span>
-          <ul class="slides-desktop" data-slides>
+          <ul class="slides" data-slides>
             <li class="slide" data-active >
               <a href="fragrance-science.html" class="carousel-slide-content">
                 <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
@@ -83,7 +83,7 @@
             <i data-white class="fa-solid fa-circle"></i>
             <i class="fa-solid fa-circle"></i>
           </span>
-          <ul class="slides-mobile"data-slides>
+          <ul class="slides"data-slides>
             <li class="slide" data-active >
               <a href="fragrance-science.html" class="carousel-slide-content">
                 <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
@@ -119,7 +119,7 @@
             <i class="fa-solid fa-circle"></i>
             <i class="fa-solid fa-circle"></i>
           </span>
-          <ul class="slides-mobile"data-slides>
+          <ul class="slides"data-slides>
             <li class="slide" data-active >
               <a href="fragrance-science.html" class="carousel-slide-content">
                 <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
