Add introduction section with empty headings for future content

--- a/HTML/blogs/our-benefits.html
+++ b/HTML/blogs/our-benefits.html
@@ -153,6 +153,11 @@
           </span>
         </article>  
     </section>
+    <section class="introduction">
+      <h1></h1>
+      <h2></h2>
+      <h3></h3>
+    </section>
   </main>
   <footer data-footer>
     <div class="footer-content container">
