Add blog post structure with introduction and subheaders

--- a/HTML/blogs/our-benefits.html
+++ b/HTML/blogs/our-benefits.html
@@ -153,10 +153,32 @@
           </span>
         </article>  
     </section>
-    <section class="introduction">
-      <h1></h1>
-      <h2></h2>
-      <h3></h3>
+    <section class="blog-post">
+      <article>
+        <h1 class="section-headline">Nuestros Beneficios</h1>
+        <p class="blog-date">July 23, 2025</p>
+        <nav class="subheader-nav">
+          <ul>
+            <li><a href="#section1">Subheader 1</a></li>
+            <li><a href="#section2">Subheader 2</a></li>
+            <li><a href="#section3">Subheader 3</a></li>
+          </ul>
+        </nav>
+
+        <p class="blog-intro">
+          This is the introduction paragraph to give readers a quick overview of the blog content.
+        </p>
+      </article>
+    </section>
+    <section class="blog-content">
+        <h2 id="section1">Subheader 1</h2>
+        <p>Content under subheader 1.</p>
+
+        <h2 id="section2">Subheader 2</h2>
+        <p>Content under subheader 2.</p>
+
+        <h2 id="section3">Subheader 3</h2>
+        <p>Content under subheader 3.</p>
     </section>
   </main>
   <footer data-footer>
