Update footer links in blog and our benefits pages for improved navigation

--- a/HTML/blogs/our-benefits.html
+++ b/HTML/blogs/our-benefits.html
@@ -38,7 +38,7 @@
           <li><i id="search-icon" class="fa-solid fa-magnifying-glass fa-lg"></i></li>
         </ul>
       </nav>
-      <section class="features-carousel">
+      <section data-hero-container class="features-carousel">
           <h1 class="section-headline">Otros Articulos</h1>
           <article class="our-benefits-features-carousel__content">
             <span data-carousel class="desktop carousel">
@@ -210,7 +210,11 @@
             <span class="footer-links-column">
               <h3>Links Rápidos</h3>
               <ul>
-                <li><a href="#catalogue" target="_self" rel="noopener noreferrer">Lista Fragancias</a></li>
+                <li><a href="../blog.html">Blog</a></li>
+                <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
+                <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
+                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
+                <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
