--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -131,9 +131,13 @@
           </span>
           <span class="footer-links-column">
             <h3>Links Rápidos</h3>
-            <ul>
-              <li><a href="#catalogue" target="_self" rel="noopener noreferrer">Lista Fragancias</a></li>
-            </ul>
+             <ul>
+                <li><a href="../blog.html">Blog</a></li>
+                <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
+                <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
+                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
+                <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
+              </ul>
           </span>
           <span class="footer-links-column">
             <h3>Síguenos</h3>
