Refactor blog pages: Update gift guide, add occasion guides and personal style articles with improved structure and navigation. Adjust stylesheet links and image paths for consistency across the blog section.

--- a/HTML/blogs/fragrance-science.html
+++ b/HTML/blogs/fragrance-science.html
@@ -38,7 +38,7 @@
           <li><i id="search-icon" class="fa-solid fa-magnifying-glass fa-lg"></i></li>
         </ul>
       </nav>
-      <section class="features-carousel">
+      <section data-hero-container class="features-carousel">
           <h1 class="section-headline">Otros Articulos</h1>
           <article class="our-benefits-features-carousel__content">
             <span data-carousel class="desktop carousel">
@@ -153,40 +153,41 @@
       </section>
     </header>
     <main data-main>
-      <section class="blog-post">
-        <article>
-          <h1 class="section-headline">Nuestros Beneficios</h1>
-          <p class="blog-date">July 23, 2025</p>
-          <nav class="subheader-nav">
-            <ul>
-              <li><a href="#section1">Programa de Fidelidad</a></li>
-              <li><a href="#section2">Descuentos Especiales</a></li>
-              <li><a href="#section3">Sostenibilidad y Ahorro</a></li>
-            </ul>
-          </nav>
+  <section class="blog-post">
+    <article>
+      <h1 class="section-headline">Ciencia de las Fragancias y Educación</h1>
+      <p class="blog-date">July 23, 2025</p>
+      <nav class="subheader-nav">
+        <ul>
+          <li><a href="#section1">Cómo funcionan las fragancias</a></li>
+          <li><a href="#section2">Notas y familias olfativas</a></li>
+          <li><a href="#section3">Efectos en emociones y memoria</a></li>
+        </ul>
+      </nav>
 
-          <p class="blog-intro">
-            Descubre por qué comprar en nuestra perfumería es una experiencia única. No solo ofrecemos fragancias exclusivas, sino también beneficios diseñados para premiar tu lealtad, cuidar del medio ambiente y ayudarte a ahorrar en cada visita.
-          </p>
-        </article>
-      </section>
-      <section class="blog-content">
-        <h2 id="section1">Programa de Fidelidad</h2>
-        <p>
-          Valoramos tu preferencia. Por eso, cada vez que compras o recargas tu fragancia favorita, acumulas un sello. Al completar 10 sellos, recibirás una recarga completamente gratis y un 20% de descuento en cualquier compra adicional que realices  <strong>ese mismo día</strong>.Es nuestra manera de agradecer tu confianza constante.
-        </p>
+      <p class="blog-intro">
+        Ideal para lectores curiosos que quieren descubrir el “por qué” detrás del comportamiento de las fragancias. Aprende cómo la ciencia y el arte se unen para crear experiencias inolvidables.
+      </p>
+    </article>
+  </section>
+  <section class="blog-content">
+    <h2 id="section1">Cómo funcionan las fragancias</h2>
+    <p>
+      Las fragancias se liberan en capas llamadas <strong>notas</strong>. Las notas de salida son las primeras en percibirse, las de corazón aportan la identidad de la fragancia y las de fondo dejan la huella duradera en la piel.
+    </p>
 
-        <h2 id="section2">Descuentos Especiales</h2>
-        <p>
-          Celebramos tus momentos especiales. En tu cumpleaños, disfruta de un 20% de descuento en perfumería, un 10% en bisutería y recibe una crema de regalo. Además, si refieres a un amigo que aún no haya comprado con nosotros y realiza una compra mencionando tu nombre, obtendrás un 20% de descuento en tu próxima compra.
-        </p>
+    <h2 id="section2">Notas y familias olfativas</h2>
+    <p>
+      Existen familias como cítricas, florales, amaderadas y orientales. Conocerlas ayuda a identificar qué aromas se adaptan mejor a tu estilo y personalidad.
+    </p>
 
-        <h2 id="section3">Sostenibilidad y Ahorro</h2>
-        <p>
-          Con nuestro programa <strong>Econorecarga</strong>, incentivamos el cuidado del medio ambiente. Trae tu envase vacío y recarga tu fragancia con un precio preferencial. Así reduces residuos y ahorras dinero, sin sacrificar calidad.
-        </p>
-      </section>
-    </main>
+    <h2 id="section3">Efectos en emociones y memoria</h2>
+    <p>
+      Los aromas activan el sistema límbico del cerebro, el centro de las emociones y la memoria. Por eso, una fragancia puede recordarte a una persona, un lugar o un momento especial.
+    </p>
+  </section>
+</main>
+
     <footer data-footer>
       <div class="footer-content container">
         <section class="footer-presentation">
@@ -210,7 +211,11 @@
             <span class="footer-links-column">
               <h3>Links Rápidos</h3>
               <ul>
-                <li><a href="#catalogue" target="_self" rel="noopener noreferrer">Lista Fragancias</a></li>
+                <li><a href="../blog.html">Blog</a></li>
+                <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
+                <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
+                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
+                <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
