--- a/HTML/blogs/fragrance-science.html
+++ b/HTML/blogs/fragrance-science.html
@@ -87,7 +87,7 @@
                 <li class="slide" data-active >
                   <a href="fragrance-science.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
-                    <h3>Ciencia de las Fragancias y Educación</h3>
+                    <h3>Nuestros Beneficios</h3>
                   </a>
                   <a href="occasion-guides.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
