--- a/HTML/blogs/fragrance-science.html
+++ b/HTML/blogs/fragrance-science.html
@@ -52,8 +52,8 @@
               <ul class="slides" data-slides>
                 <li class="slide" data-active >
                   <a href="fragrance-science.html" class="carousel-slide-content">
-                    <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
-                    <h3>Ciencia de las Fragancias y Educación</h3>
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
                   </a>
                   <a href="occasion-guides.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
