Update blog navigation and carousel links: Add 'Nuestros Beneficios' link to multiple blog pages and adjust carousel items for better user experience.

--- a/HTML/blogs/fragrance-science.html
+++ b/HTML/blogs/fragrance-science.html
@@ -51,9 +51,13 @@
               </span>
               <ul class="slides" data-slides>
                 <li class="slide" data-active >
-                  <a href="fragrance-science.html" class="carousel-slide-content">
+                  <a href="our-benefits.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/beneficios.jpg" alt="">
                     <h3>Nuestros beneficios</h3>
+                  </a>
+                  <a href="fragrance-science.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
+                    <h3>Ciencia de las Fragancias y Educación</h3>
                   </a>
                   <a href="occasion-guides.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
@@ -85,9 +89,13 @@
               </span>
               <ul class="slides"data-slides>
                 <li class="slide" data-active >
+                  <a href="our-benefits.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
+                  </a>
                   <a href="fragrance-science.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
-                    <h3>Nuestros Beneficios</h3>
+                    <h3>Ciencia de las Fragancias y Educación</h3>
                   </a>
                   <a href="occasion-guides.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
@@ -124,6 +132,12 @@
                   <a href="fragrance-science.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
                     <h3>Ciencia de las Fragancias y Educación</h3>
+                  </a>
+                </li>
+                <li class="slide" >
+                  <a href="our-benefits.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
                   </a>
                 </li>
                 <li class="slide" >
@@ -186,8 +200,7 @@
       Los aromas activan el sistema límbico del cerebro, el centro de las emociones y la memoria. Por eso, una fragancia puede recordarte a una persona, un lugar o un momento especial.
     </p>
   </section>
-</main>
-
+    </main>
     <footer data-footer>
       <div class="footer-content container">
         <section class="footer-presentation">
@@ -202,10 +215,11 @@
             <span class="footer-links-column">
               <h3>Navegación</h3>
               <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about-us.html">Acerca de Nosotros</a></li>
-                <li><a href="./catalogo.html">Catálogo</a></li>
-                <li><a href="./contact-us.html">Contáctanos</a></li>
+                <li><a href="../blog.html">Blog</a></li>
+                <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
+                <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
+                <li><a href="../blogs/personal-style.html">Estilo personal </a></li>
+                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
