--- a/HTML/blogs/occasion-guides.html
+++ b/HTML/blogs/occasion-guides.html
@@ -51,6 +51,10 @@
               </span>
               <ul class="slides" data-slides>
                 <li class="slide" data-active >
+                  <a href="our-benefits.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
+                  </a>
                   <a href="fragrance-science.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
                     <h3>Ciencia de las Fragancias y Educación</h3>
@@ -85,6 +89,10 @@
               </span>
               <ul class="slides"data-slides>
                 <li class="slide" data-active >
+                  <a href="our-benefits.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
+                  </a>
                   <a href="fragrance-science.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
                     <h3>Ciencia de las Fragancias y Educación</h3>
@@ -127,6 +135,12 @@
                   </a>
                 </li>
                 <li class="slide" >
+                  <a href="our-benefits.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
+                  </a>
+                </li>
+                <li class="slide" >
                   <a href="occasion-guides.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
                     <h3>Guías Según la Ocasión y el Momento</h3>
@@ -153,41 +167,40 @@
       </section>
     </header>
     <main data-main>
-  <section class="blog-post">
-    <article>
-      <h1 class="section-headline">Guía Según la Ocasión y el Momento</h1>
-      <p class="blog-date">July 23, 2025</p>
-      <nav class="subheader-nav">
-        <ul>
-          <li><a href="#section1">Fragancias para el día</a></li>
-          <li><a href="#section2">Perfumes para la noche</a></li>
-          <li><a href="#section3">Clima y estaciones</a></li>
-        </ul>
-      </nav>
+      <section class="blog-post">
+        <article>
+          <h1 class="section-headline">Guía Según la Ocasión y el Momento</h1>
+          <p class="blog-date">July 23, 2025</p>
+          <nav class="subheader-nav">
+            <ul>
+              <li><a href="#section1">Fragancias para el día</a></li>
+              <li><a href="#section2">Perfumes para la noche</a></li>
+              <li><a href="#section3">Clima y estaciones</a></li>
+            </ul>
+          </nav>
 
-      <p class="blog-intro">
-        Ayuda a los clientes a saber cuándo usar ciertos perfumes según el clima, la hora del día o la actividad que realizan.
-      </p>
-    </article>
-  </section>
-  <section class="blog-content">
-    <h2 id="section1">Fragancias para el día</h2>
-    <p>
-      Durante la mañana o en ambientes laborales, las fragancias frescas y ligeras como las cítricas o herbales transmiten energía y limpieza sin resultar invasivas.
-    </p>
+          <p class="blog-intro">
+            Ayuda a los clientes a saber cuándo usar ciertos perfumes según el clima, la hora del día o la actividad que realizan.
+          </p>
+        </article>
+      </section>
+      <section class="blog-content">
+        <h2 id="section1">Fragancias para el día</h2>
+        <p>
+          Durante la mañana o en ambientes laborales, las fragancias frescas y ligeras como las cítricas o herbales transmiten energía y limpieza sin resultar invasivas.
+        </p>
 
-    <h2 id="section2">Perfumes para la noche</h2>
-    <p>
-      En la noche predominan aromas intensos y envolventes como los orientales, especiados o amaderados, perfectos para cenas o eventos sociales.
-    </p>
+        <h2 id="section2">Perfumes para la noche</h2>
+        <p>
+          En la noche predominan aromas intensos y envolventes como los orientales, especiados o amaderados, perfectos para cenas o eventos sociales.
+        </p>
 
-    <h2 id="section3">Clima y estaciones</h2>
-    <p>
-      En verano, los perfumes acuáticos y frutales refrescan; en invierno, las fragancias cálidas y dulces aportan confort. Adaptar tu aroma a la estación potencia tu presencia.
-    </p>
-  </section>
-</main>
-
+        <h2 id="section3">Clima y estaciones</h2>
+        <p>
+          En verano, los perfumes acuáticos y frutales refrescan; en invierno, las fragancias cálidas y dulces aportan confort. Adaptar tu aroma a la estación potencia tu presencia.
+        </p>
+      </section>
+    </main>
     <footer data-footer>
       <div class="footer-content container">
         <section class="footer-presentation">
@@ -202,10 +215,11 @@
             <span class="footer-links-column">
               <h3>Navegación</h3>
               <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about-us.html">Acerca de Nosotros</a></li>
-                <li><a href="./catalogo.html">Catálogo</a></li>
-                <li><a href="./contact-us.html">Contáctanos</a></li>
+                <li><a href="../blog.html">Blog</a></li>
+                <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
+                <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
+                <li><a href="../blogs/personal-style.html">Estilo personal </a></li>
+                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
