--- a/HTML/blogs/gift-guide.html
+++ b/HTML/blogs/gift-guide.html
@@ -51,6 +51,10 @@
               </span>
               <ul class="slides" data-slides>
                 <li class="slide" data-active >
+                  <a href="our-benefits.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
+                  </a>
                   <a href="fragrance-science.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
                     <h3>Ciencia de las Fragancias y Educación</h3>
@@ -85,6 +89,10 @@
               </span>
               <ul class="slides"data-slides>
                 <li class="slide" data-active >
+                  <a href="our-benefits.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
+                  </a>
                   <a href="fragrance-science.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
                     <h3>Ciencia de las Fragancias y Educación</h3>
@@ -127,6 +135,12 @@
                   </a>
                 </li>
                 <li class="slide" >
+                  <a href="our-benefits.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
+                  </a>
+                </li>
+                <li class="slide" >
                   <a href="occasion-guides.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
                     <h3>Guías Según la Ocasión y el Momento</h3>
@@ -153,41 +167,40 @@
       </section>
     </header>
     <main data-main>
-  <section class="blog-post">
-    <article>
-      <h1 class="section-headline">Guía Para Comprar y Regalar</h1>
-      <p class="blog-date">July 23, 2025</p>
-      <nav class="subheader-nav">
-        <ul>
-          <li><a href="#section1">Cómo elegir un perfume para regalar</a></li>
-          <li><a href="#section2">Consejos para compras online</a></li>
-          <li><a href="#section3">Perfumes de colección</a></li>
-        </ul>
-      </nav>
+      <section class="blog-post">
+        <article>
+          <h1 class="section-headline">Guía Para Comprar y Regalar</h1>
+          <p class="blog-date">July 23, 2025</p>
+          <nav class="subheader-nav">
+            <ul>
+              <li><a href="#section1">Cómo elegir un perfume para regalar</a></li>
+              <li><a href="#section2">Consejos para compras online</a></li>
+              <li><a href="#section3">Perfumes de colección</a></li>
+            </ul>
+          </nav>
 
-      <p class="blog-intro">
-        Dirigido a compradores de regalos, clientes online y coleccionistas que buscan elegir la fragancia perfecta para cada ocasión.
-      </p>
-    </article>
-  </section>
-  <section class="blog-content">
-    <h2 id="section1">Cómo elegir un perfume para regalar</h2>
-    <p>
-      Considera la personalidad y el estilo de la persona. Si es dinámica, una fragancia fresca es ideal; si es sofisticada, opta por notas amaderadas o florales intensas.
-    </p>
+          <p class="blog-intro">
+            Dirigido a compradores de regalos, clientes online y coleccionistas que buscan elegir la fragancia perfecta para cada ocasión.
+          </p>
+        </article>
+      </section>
+      <section class="blog-content">
+        <h2 id="section1">Cómo elegir un perfume para regalar</h2>
+        <p>
+          Considera la personalidad y el estilo de la persona. Si es dinámica, una fragancia fresca es ideal; si es sofisticada, opta por notas amaderadas o florales intensas.
+        </p>
 
-    <h2 id="section2">Consejos para compras online</h2>
-    <p>
-      Lee las descripciones de notas olfativas, revisa reseñas y elige tiendas con políticas de devolución claras para asegurar una compra satisfactoria.
-    </p>
+        <h2 id="section2">Consejos para compras online</h2>
+        <p>
+          Lee las descripciones de notas olfativas, revisa reseñas y elige tiendas con políticas de devolución claras para asegurar una compra satisfactoria.
+        </p>
 
-    <h2 id="section3">Perfumes de colección</h2>
-    <p>
-      Muchos compradores valoran fragancias exclusivas o de edición limitada. Estas piezas no solo son un regalo, sino también una inversión en arte olfativo.
-    </p>
-  </section>
-</main>
-
+        <h2 id="section3">Perfumes de colección</h2>
+        <p>
+          Muchos compradores valoran fragancias exclusivas o de edición limitada. Estas piezas no solo son un regalo, sino también una inversión en arte olfativo.
+        </p>
+      </section>
+    </main>
     <footer data-footer>
       <div class="footer-content container">
         <section class="footer-presentation">
@@ -202,10 +215,11 @@
             <span class="footer-links-column">
               <h3>Navegación</h3>
               <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about-us.html">Acerca de Nosotros</a></li>
-                <li><a href="./catalogo.html">Catálogo</a></li>
-                <li><a href="./contact-us.html">Contáctanos</a></li>
+                <li><a href="../blog.html">Blog</a></li>
+                <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
+                <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
+                <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
+                <li><a href="../blogs/personal-style.html">Estilo personal </a></li>
               </ul>
             </span>
             <span class="footer-links-column">
