--- a/HTML/blogs/our-benefits.html
+++ b/HTML/blogs/our-benefits.html
@@ -211,10 +211,10 @@
               <h3>Links Rápidos</h3>
               <ul>
                 <li><a href="../blog.html">Blog</a></li>
-                <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
                 <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
-                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
                 <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
+                <li><a href="../blogs/personal-style.html">Estilo personal </a></li>
+                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
