--- a/HTML/blogs/personal-style.html
+++ b/HTML/blogs/personal-style.html
@@ -51,6 +51,10 @@
               </span>
               <ul class="slides" data-slides>
                 <li class="slide" data-active >
+                  <a href="our-benefits.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
+                  </a>
                   <a href="fragrance-science.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
                     <h3>Ciencia de las Fragancias y Educación</h3>
@@ -85,6 +89,10 @@
               </span>
               <ul class="slides"data-slides>
                 <li class="slide" data-active >
+                  <a href="our-benefits.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
+                  </a>
                   <a href="fragrance-science.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
                     <h3>Ciencia de las Fragancias y Educación</h3>
@@ -127,6 +135,12 @@
                   </a>
                 </li>
                 <li class="slide" >
+                  <a href="our-benefits.html" class="carousel-slide-content">
+                    <img src="../../Images/Blog/beneficios.jpg" alt="">
+                    <h3>Nuestros beneficios</h3>
+                  </a>
+                </li>
+                <li class="slide" >
                   <a href="occasion-guides.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
                     <h3>Guías Según la Ocasión y el Momento</h3>
@@ -153,41 +167,40 @@
       </section>
     </header>
     <main data-main>
-  <section class="blog-post">
-    <article>
-      <h1 class="section-headline">Estilo Personal y Uso Avanzado</h1>
-      <p class="blog-date">July 23, 2025</p>
-      <nav class="subheader-nav">
-        <ul>
-          <li><a href="#section1">Cómo elegir tu aroma distintivo</a></li>
-          <li><a href="#section2">Capas y combinaciones</a></li>
-          <li><a href="#section3">Fragancias para distintas facetas</a></li>
-        </ul>
-      </nav>
+      <section class="blog-post">
+        <article>
+          <h1 class="section-headline">Estilo Personal y Uso Avanzado</h1>
+          <p class="blog-date">July 23, 2025</p>
+          <nav class="subheader-nav">
+            <ul>
+              <li><a href="#section1">Cómo elegir tu aroma distintivo</a></li>
+              <li><a href="#section2">Capas y combinaciones</a></li>
+              <li><a href="#section3">Fragancias para distintas facetas</a></li>
+            </ul>
+          </nav>
 
-      <p class="blog-intro">
-        Para quienes buscan una relación más profunda y personalizada con las fragancias, explorando cómo un aroma puede convertirse en parte de su identidad.
-      </p>
-    </article>
-  </section>
-  <section class="blog-content">
-    <h2 id="section1">Cómo elegir tu aroma distintivo</h2>
-    <p>
-      Elige una fragancia que refleje tu carácter. Las notas frescas suelen expresar dinamismo, mientras que las amaderadas proyectan madurez y seguridad.
-    </p>
+          <p class="blog-intro">
+            Para quienes buscan una relación más profunda y personalizada con las fragancias, explorando cómo un aroma puede convertirse en parte de su identidad.
+          </p>
+        </article>
+      </section>
+      <section class="blog-content">
+        <h2 id="section1">Cómo elegir tu aroma distintivo</h2>
+        <p>
+          Elige una fragancia que refleje tu carácter. Las notas frescas suelen expresar dinamismo, mientras que las amaderadas proyectan madurez y seguridad.
+        </p>
 
-    <h2 id="section2">Capas y combinaciones</h2>
-    <p>
-      El arte del “layering” consiste en combinar distintas fragancias para crear un aroma único. Es una técnica avanzada que personaliza tu experiencia olfativa.
-    </p>
+        <h2 id="section2">Capas y combinaciones</h2>
+        <p>
+          El arte del “layering” consiste en combinar distintas fragancias para crear un aroma único. Es una técnica avanzada que personaliza tu experiencia olfativa.
+        </p>
 
-    <h2 id="section3">Fragancias para distintas facetas</h2>
-    <p>
-      No somos los mismos en todas las situaciones. Puedes tener un aroma para el trabajo, otro para eventos sociales y uno más íntimo para ocasiones especiales.
-    </p>
-  </section>
-</main>
-
+        <h2 id="section3">Fragancias para distintas facetas</h2>
+        <p>
+          No somos los mismos en todas las situaciones. Puedes tener un aroma para el trabajo, otro para eventos sociales y uno más íntimo para ocasiones especiales.
+        </p>
+      </section>
+    </main>
     <footer data-footer>
       <div class="footer-content container">
         <section class="footer-presentation">
@@ -211,11 +224,12 @@
             <span class="footer-links-column">
               <h3>Links Rápidos</h3>
               <ul>
+                <ul>
                 <li><a href="../blog.html">Blog</a></li>
                 <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
                 <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
-                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
                 <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
+                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
