--- a/HTML/blogs/fragrance-science.html
+++ b/HTML/blogs/fragrance-science.html
@@ -55,10 +55,6 @@
                     <img src="../../Images/Blog/beneficios.jpg" alt="">
                     <h3>Nuestros beneficios</h3>
                   </a>
-                  <a href="fragrance-science.html" class="carousel-slide-content">
-                    <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
-                    <h3>Ciencia de las Fragancias y Educación</h3>
-                  </a>
                   <a href="occasion-guides.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
                     <h3>Guías Según la Ocasión y el Momento</h3>
@@ -78,7 +74,7 @@
               <button class="button next" data-carousel-button='next'>
                 <i class="fa-solid fa-chevron-right"></i>
               </button>
-            </span>
+            </span> 
             <span data-carousel class="mobile medium carousel">
               <button class="button preview" data-carousel-button='preview'>
                 <i class="fa-solid fa-chevron-left"></i>
@@ -92,10 +88,6 @@
                   <a href="our-benefits.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/beneficios.jpg" alt="">
                     <h3>Nuestros beneficios</h3>
-                  </a>
-                  <a href="fragrance-science.html" class="carousel-slide-content">
-                    <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
-                    <h3>Ciencia de las Fragancias y Educación</h3>
                   </a>
                   <a href="occasion-guides.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
@@ -129,12 +121,6 @@
               </span>
               <ul class="slides"data-slides>
                 <li class="slide" data-active >
-                  <a href="fragrance-science.html" class="carousel-slide-content">
-                    <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
-                    <h3>Ciencia de las Fragancias y Educación</h3>
-                  </a>
-                </li>
-                <li class="slide" >
                   <a href="our-benefits.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/beneficios.jpg" alt="">
                     <h3>Nuestros beneficios</h3>
@@ -215,11 +201,10 @@
             <span class="footer-links-column">
               <h3>Navegación</h3>
               <ul>
-                <li><a href="../blog.html">Blog</a></li>
-                <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
-                <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
-                <li><a href="../blogs/personal-style.html">Estilo personal </a></li>
-                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about-us.html">Acerca de Nosotros</a></li>
+                <li><a href="./catalogo.html">Catálogo</a></li>
+                <li><a href="./contact-us.html">Contáctanos</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
@@ -227,9 +212,9 @@
               <ul>
                 <li><a href="../blog.html">Blog</a></li>
                 <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
-                <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
-                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
                 <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
+                <li><a href="../blogs/personal-style.html">Estilo personal </a></li>
+                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
