--- a/HTML/blogs/gift-guide.html
+++ b/HTML/blogs/gift-guide.html
@@ -68,12 +68,6 @@
                     <h3>Estilo Personal y Uso Avanzado</h3>
                   </a>
                 </li>
-                <li class="slide" >
-                  <a href="gift-guide.html" class="carousel-slide-content">
-                    <img src="../../Images/Blog/guia-regalos.jpg" alt="">
-                    <h3>Guía para Comprar y Regalar</h3>
-                  </a>
-                </li>
               </ul>
               <button class="button next" data-carousel-button='next'>
                 <i class="fa-solid fa-chevron-right"></i>
@@ -215,11 +209,10 @@
             <span class="footer-links-column">
               <h3>Navegación</h3>
               <ul>
-                <li><a href="../blog.html">Blog</a></li>
-                <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
-                <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
-                <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
-                <li><a href="../blogs/personal-style.html">Estilo personal </a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about-us.html">Acerca de Nosotros</a></li>
+                <li><a href="./catalogo.html">Catálogo</a></li>
+                <li><a href="./contact-us.html">Contáctanos</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
@@ -228,8 +221,9 @@
                 <li><a href="../blog.html">Blog</a></li>
                 <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
                 <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
-                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
                 <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
+                <li><a href="../blogs/personal-style.html">Estilo personal </a></li>
+                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
