--- a/HTML/blogs/occasion-guides.html
+++ b/HTML/blogs/occasion-guides.html
@@ -59,10 +59,6 @@
                     <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
                     <h3>Ciencia de las Fragancias y Educación</h3>
                   </a>
-                  <a href="occasion-guides.html" class="carousel-slide-content">
-                    <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
-                    <h3>Guías Según la Ocasión y el Momento</h3>
-                  </a>
                   <a href="personal-style.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/estilo-personal.jpg" alt="">
                     <h3>Estilo Personal y Uso Avanzado</h3>
@@ -96,10 +92,6 @@
                   <a href="fragrance-science.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/ciencia-fragancias.jpg" alt="">
                     <h3>Ciencia de las Fragancias y Educación</h3>
-                  </a>
-                  <a href="occasion-guides.html" class="carousel-slide-content">
-                    <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
-                    <h3>Guías Según la Ocasión y el Momento</h3>
                   </a>
                 </li>
                 <li class="slide" >
@@ -138,12 +130,6 @@
                   <a href="our-benefits.html" class="carousel-slide-content">
                     <img src="../../Images/Blog/beneficios.jpg" alt="">
                     <h3>Nuestros beneficios</h3>
-                  </a>
-                </li>
-                <li class="slide" >
-                  <a href="occasion-guides.html" class="carousel-slide-content">
-                    <img src="../../Images/Blog/guia-ocasiones.jpg" alt="">
-                    <h3>Guías Según la Ocasión y el Momento</h3>
                   </a>
                 </li>
                 <li class="slide" >
@@ -215,11 +201,10 @@
             <span class="footer-links-column">
               <h3>Navegación</h3>
               <ul>
-                <li><a href="../blog.html">Blog</a></li>
-                <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
-                <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
-                <li><a href="../blogs/personal-style.html">Estilo personal </a></li>
-                <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about-us.html">Acerca de Nosotros</a></li>
+                <li><a href="./catalogo.html">Catálogo</a></li>
+                <li><a href="./contact-us.html">Contáctanos</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
@@ -228,8 +213,8 @@
                 <li><a href="../blog.html">Blog</a></li>
                 <li><a href="../blogs/our-benefits.html">Nuestros Beneficios</a></li>
                 <li><a href="../blogs/fragrance-science.html">Ciencia de las Fragancias</a></li>
+                <li><a href="../blogs/personal-style.html">Estilo personal </a></li>
                 <li><a href="../blogs/gift-guide.html">Guía de Regalos</a></li>
-                <li><a href="../blogs/occasion-guides.html">Guías por Ocasión</a></li>
               </ul>
             </span>
             <span class="footer-links-column">
