Refactor catalogue card styles: Adjust height and alignment properties for improved layout consistency.

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -43,7 +43,7 @@
         <div class="catalogue__card">
           <a class="PDF-link" href="./blogs/our-benefits.html" target="_blank">
             <span class="card-content-container">
-              <img src="../Images/Blog/beneficios.jpg" alt="Beneficios" loading="lazy" 
+              <img src="../Images/Blog/beneficios.jpg" alt="Beneficios" loading="lazy">
               <h3>Nuestros Beneficios</h3>
               <p>Descubre las ventajas exclusivas que ofrecemos a nuestros clientes: productos de alta calidad, atención personalizada y una experiencia de compra única.</p>
               <span class="call-to-action" style="--clr:#fff">
